--- a/index.HTML
+++ b/index.HTML
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora IMC</title>
 </head>
 
 <body>
@@ -12,22 +12,24 @@
     <h1></h1>
     <p></p>
 
-    <button onclick="exibeTexto()">Clique aqui</button>
-    <br>
-    <br>
-    <button onclick="exibeResultado()">SOMA</button>
-    <br>
-    <br>
     <input type="text" id="nome"> Digite seu nome
     <br>
-    <input type="text" id="sobrenome"> Digite seu sobrenome
     <br>
+    <input type="number" id="peso"> Digite seu peso
     <br>
-    <button onclick="apareceNome()">Nome e Sobrenome</button>
-    <br>
-    <p>Nome Completo: <input type="text" id="nomeCompleto"></p>
+    <br> 
+    <input type="number" id="altura">Digite sua altura
+<br>
+<br>
 
-    <script src="dom.js"></script>
+    <button onclick="exibeInfos()">Informações</button>
+    <br>
+
+    <p>Resultados: <input type="text" id="nomeImc"></p>
+ 
+    <h2></h2>
+
+    <script src="imc.js"></script>
 </body>
 
 </html>
