--- a/index.HTML
+++ b/index.HTML
@@ -17,17 +17,19 @@
     <br>
     <input type="number" id="peso"> Digite seu peso
     <br>
-    <br> 
+    <br>
     <input type="number" id="altura">Digite sua altura
-<br>
-<br>
+    <br>
+    <br>
 
     <button onclick="exibeInfos()">Informações</button>
     <br>
 
-    <p>Resultados: <input type="text" id="nomeImc"></p>
- 
-    <h2></h2>
+    <p>Resultados: <input type="text" id="nomeImc" size="30"></p>
+
+    <h2> Aqui estão alguns parametros</h2>
+    <button onclick="exibeParametros()">Parametros</button>
+    <input type="text" id="parametros">
 
     <script src="imc.js"></script>
 </body>
